[package]
name = "min-mnist"
version = "0.1.0"
authors = ["Lokathor <zefria@gmail.com>"]
edition = "2018"
license = "Zlib OR Apache-2.0 OR MIT"

publish = false

[dependencies]
gba = "0.14.1"

[profile.dev]
opt-level = 3
incremental = false

[profile.dev.package."*"]
debug-assertions = false

[profile.release]
codegen-units = 1
incremental = false
